objects/BMCServiceDesk__ChangeCollision__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Change1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request - 1</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Change Collisions</relationshipLabel>
        <relationshipName>Change_Collisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Change2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request - 2</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Change Collisions (Change Request - 2)</relationshipLabel>
        <relationshipName>Change_Collisions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CollisionState__c</fullName>
        <label>Collision State</label>
        <picklist>
            <picklistValues>
                <fullName>NoneFound</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Detected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ignored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConfigurationItem</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Change Collisions</relationshipLabel>
        <relationshipName>Change_Collisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>BMCServiceDesk__Change1_NotEquals_Change2</fullName>
        <active>true</active>
        <description>Change cannot collide with itself</description>
        <errorConditionFormula>BMCServiceDesk__Change1__c ==  BMCServiceDesk__Change2__c</errorConditionFormula>
        <errorMessage>Change Request cannot have collision with itself</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Fields_required</fullName>
        <active>true</active>
        <description>Fields required</description>
        <errorConditionFormula>isblank(BMCServiceDesk__Change1__c) 
|| isblank(BMCServiceDesk__Change2__c) 
|| isblank(BMCServiceDesk__ConfigurationItem__c)</errorConditionFormula>
        <errorMessage>Fields required to update/insert record
 - Change 1 , Change 2, ConfigurationItem</errorMessage>
    </validationRules>
</CustomObject>